2002-09-04  Bruno Haible  <bruno@clisp.org>

	* m4/sigsegv.m4 (CL_SIGSEGV): Don't define NO_SIGSEGV.
	* makemake.in (XCFLAGS): Add -DNO_SIGSEGV if there is no libsigsegv.

2002-09-03  Bruno Haible  <bruno@clisp.org>

	* sigsegv: Remove directory.
	* unix/INSTALL: Recommend installation of GNU libiconv, GNU libsigsegv.
	* win32msvc/INSTALL: Likewise.
	* m4/sigsegv.m4: New file.
	* configure.in: Call CL_SIGSEGV.
	* makemake.in (LIBSIGSEGV): New variable.
	(USE_SIGSEGV, XCL_SIGSEGVLIB): Remove variables.
	(FILES, LIBS): Remove libsigsegv.a.
	(EVERY_INCLUDES_H): Remove sigsegv.h.
	(sigsegv.h, libsigsegv.a): Remove rules.
	(clean1, clean4): Don't remove libsigsegv.a, sigsegv.h, sigsegv.
	* lispbibl.d: Don't include sigsegv.h if NO_SIGSEGV is defined.
	* Makefile.devel (SOURCES4): Remove sigsegv.
	(CONFIGURES): Remove sigsegv/configure.
	(configures): Remove dependency on sigsegv/autoconf/aclocal.m4.
	(sigsegv/autoconf/aclocal.m4, sigsegv/configure): Remove rules.

2002-09-03  Sam Steingold  <sds@gnu.org>

	* win32.d (HAVE_UNISTD_H): do not define (revert the 2002-08-19
	patch) since <unistd.h> is needed only for exec() which is not
	used on WIN32_NATIVE

2002-09-02  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Fixing makemake.in for mingw.
	* makemake.in: fixed 2002-08-10 patch: double quotes now
	used on TSYS=win32msvc.
	(LIBS) [win32gcc]: added libuuid to library list (need it on mingw
	to handle shell objects)

2002-09-02  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Implemented shorcut symlink ersatz on win32 (read-only,
	for CYGWIN compatibility).
	* win32aux.d (com_initialized): new global variable.
	(init_win32): initialize COM library.
	(done_win32): deinitialize COM library.
	* win32.d: include shell object headers.
	* pathname.d [WIN32_NATIVE] (FullName): new function,
	translates short name to long one.
	(resolve_shell_shortcut): new function handles shortcuts.
	(assure_dir_exists): now trying to resolve ersatzsymlinkshortcuts.

2002-08-28  Sam Steingold  <sds@gnu.org>
