@@ -11562,26 +11562,15 @@ The function make-closure is required.
     (do ((L const-list (cdr L))
          (i 0 (1+ i)))
         ((null L))
-      (terpri stream)
-      (write-string "(CONST " stream)
-      (prin1 i stream)
-      (write-string ") = " stream)
-      (prin1 (car L) stream))
-    (terpri stream)
-    (prin1 req-anz stream)
-    (write-string (TEXT " required arguments") stream)
-    (terpri stream)
-    (prin1 opt-anz stream)
-    (write-string (TEXT " optional arguments") stream)
-    (terpri stream)
+      (format stream "~%(CONST ~S) = ~S" i (car L)))
+    (format stream (TEXT "~%~S required argument~:P") req-anz)
+    (format stream (TEXT "~%~S optional argument~:P~%") opt-anz)
     (if rest-p
       (write-string (TEXT "Rest parameter") stream)
       (write-string (TEXT "No rest parameter") stream))
     (if key-p
       (let ((kw-count (length keyword-list)))
-        (terpri stream)
-        (prin1 kw-count stream)
-        (format stream (TEXT " keyword parameter~P: ") kw-count)
+        (format stream (TEXT "~%~S keyword parameter~:P: ") kw-count)
         (do ((L keyword-list))
             ((endp L))
           (prin1 (pop L) stream)
@@ -11594,11 +11583,11 @@ The function make-closure is required.
         (write-string (TEXT "No keyword parameters") stream)))
     (let ((const-string-list
             (mapcar #'(lambda (x) (sys::write-to-short-string x 35))
-                    const-list)))
-      (do ((L (disassemble-LAP byte-list const-list) (cdr L)))
-          ((null L))
-        (let ((PC (caar L))
-              (instr (cdar L)))
+                    const-list))
+          (lap-list (disassemble-LAP byte-list const-list)))
+      (format stream (TEXT "~%~S byte-code instruction~:P:") (length lap-list))
+      (dolist (L lap-list)
+        (let ((PC (car L)) (instr (cdr L)))
           (terpri stream)
           (prin1 PC stream)
           (stream-tab stream 6)
